# pet_the_cat_3ds_tui

./: Cargo.toml  LICENSE.md  README.md
locales/: tui.yml
src/: app.rs  handler.rs  lib.rs  localization.rs  main.rs  ui.rs
