[package]
name = "pet_the_cat_3ds_tui"
version = "0.1.0"
edition = "2021"
authors = ["Tom Olivier <contact.tom60@proton.me>"]
#license = "TBD"

[dependencies]
pet_the_cat = { git = "https://github.com/Pet-the-cat/pet_the_cat", tag = "v0.1.0" }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
rust-i18n = "3"
toml = "0.8.8"

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
